glx/testdata/invalid/assertion-quality-int-pointer/vocabularies/quality-ratings.glx
quality_ratings:
  "1":
    label: "Questionable"
  "2":
    label: "Unreliable"
  "3":
    label: "Reliable"


